# singleton-log

./: .gitignore  CMakeLists.txt  Log.cpp  Log.hpp  LogUtil.cpp  LogUtil.h  README.md
.github/workflows/: c-cpp.yml
LoggerSample/: LoggerSample.sln
LoggerSample/LoggerSample/: LoggerSample.cpp  LoggerSample.vcxproj  LoggerSample.vcxproj.filters
test/: CMakeLists.txt  test-file+stdout.cpp  test-file.cpp  test-stderr.cpp  test-stdout.cpp  test-threading.cpp
